# data-engineering-bootcamp

./: README.md
module1/: README.md  cours1-configuration-environnement-local.ipynb  cours2-python-pour-data-engineering.ipynb  cours3-qualité-de-code-automatisée.ipynb  cours4-CICD-avec-GitHub-Actions.ipynb  cours5-Introduction-à-Docker.ipynb  pyproject.toml
module2/: README.md
module3/: README.md
module4/: README.md
module5/: README.md
