[project]
name = "module1-fundamentals"
version = "0.1.0"
description = "Module 1 - Fondamentaux Data Engineering"
authors = [
    {name = "PA",email = "pohara@sharpstone.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.0"
pylint = "^3.3.7"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

